--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Portions Copyrighted 2015 ForgeRock AS. -->
 <resources>
-    <string name="app_name">FreeOTP</string>
+    <string name="app_name">Authenticator</string>
     <string name="add">Add</string>
     <string name="invalid_token">The token specified was invalid!</string>
     <string name="delete">Delete</string>
