AME-10106 Remove ability to manually add and edit items, and refactor code structure and data storage mechanism

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="app_name">ForgeRock</string>
     <string name="add">Add</string>
     <string name="invalid_token">The token specified was invalid!</string>
+    <string name="invalid_qr">The scanned QR code was invalid!</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
     <string name="restore_defaults">Restore Defaults</string>
