AME-9849 Add identity page and push mechanism, rename label and rowid

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="edit">Edit</string>
     <string name="restore_defaults">Restore Defaults</string>
     <string name="no_keys">No OTP keys installed.</string>
+    <string name="no_mechanisms">No mechanisms registered.</string>
+    <string name="no_identities">No identities registered.</string>
     <string name="add_token">Add Token</string>
     <string name="scan_qr_code">Scan QR Code</string>
     <string name="interval">Interval</string>
