--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,8 @@
     <string name="title_activity_settings">Settings</string>
     <string name="identity_title">My Accounts</string>
     <string name="mechanism_title">Account</string>
-    <string name="title_activity_delete_account">Delete this account?</string>
-    <string name="title_activity_delete_mechanism">Delete this authentication method?</string>
+    <string name="title_activity_delete_account">Delete</string>
+    <string name="title_activity_delete_mechanism">Delete</string>
 
     <!-- Duplicate entry scanned-->
     <string name="duplicate_title">Replace this authentication method?</string>
@@ -39,7 +39,9 @@
     <string name="duplicate_no">Cancel</string>
 
     <!-- Delete message -->
-    <string name="delete_confirmation_message">Removing this entry may prevent you from logging into your %@ account. Confirm you have already disabled this authentication method online.</string>
+    <string name="delete_confirmation_message">Removing this %1$s may prevent you from logging into your account. Confirm you have already disabled this authentication method online.</string>
+    <string name="delete_type_account">account</string>
+    <string name="delete_type_mechanism">authentication method</string>
 
     <!-- Accounts activity (IdentityActivity) -->
     <string name="no_identities">No accounts registered</string>
